Front page HTML now generated from a template

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,7 +1,15 @@
 <!--This is tag -->
 <html>
 <!-- create a tree, To-Do list is inside of title -->
-  <title>To-Do lists</title>
+  <head>
+    <title>To-Do lists</title>
+  </head>
+  <body>
+    <h1>Your To-Do list</h1>
+    <input id="id_new_item" placeholder="Enter a to-do item">
+    <table id="id_list_table">
+    </table>
+  </body>
 <!-- Close HTML tag -->
 </html>
 <!-- Ending with a new line is an issue -->
