--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -11,14 +11,15 @@
       <!-- get text field -->
       <input id="id_new_item" name = "item_text" placeholder="Enter a to-do item">
       <!-- needed if you use a form, if you're using the render func you're already doing the right thing -->
+      <!-- Cross-Site Request Forger CSRF -->
       {% csrf_token %}
     </form>
     <table id="id_list_table">
-      <tr><td>1. {{ new_item_text }}</td></tr>
+      {% for item in items %}
+      <tr><td>{{ forloop.counter }}: {{ item.text }}</td></tr>
+      {% endfor %}
     </table>
   </body>
 <!-- Close HTML tag -->
 </html>
 <!-- Ending with a new line is an issue -->
-
-<!-- Cross-Site Request Forger CSRF -->
