Added a list view and url.

--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -6,14 +6,19 @@
   </head>
   <body>
     <h1>Your To-Do list</h1>
-    <!-- Send info back to htm asked for -->
-    <form method="POST">
+    <!-- Send info back to htm asked for if not present sends back to url-->
+    <form method="POST" action = "">
       <!-- get text field -->
       <input id="id_new_item" name = "item_text" placeholder="Enter a to-do item">
       <!-- needed if you use a form, if you're using the render func you're already doing the right thing -->
       <!-- Cross-Site Request Forger CSRF -->
       {% csrf_token %}
     </form>
+    <table id="id_list_table">
+      {% for item in items %}
+      <tr><td>{{ forloop.counter }}. {{ item.text }}</td></tr>
+      {% endfor %}
+    </table>
   </body>
 <!-- Close HTML tag -->
 </html>
