Added a new list url.

--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Your To-Do list</h1>
     <!-- Send info back to htm asked for if not present sends back to url-->
-    <form method="POST" action = "">
+    <form method="POST" action="/lists/new">
       <!-- get text field -->
       <input id="id_new_item" name = "item_text" placeholder="Enter a to-do item">
       <!-- needed if you use a form, if you're using the render func you're already doing the right thing -->
