--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,4 +1,5 @@
 <!--This is tag -->
+<!-- Just static, nothing dynamic going on here -->
 <html>
 <!-- create a tree, To-Do list is inside of title -->
   <head>
