--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -7,13 +7,14 @@
   <body>
     <h1>Your To-Do list</h1>
     <!-- Send info back to htm asked for if not present sends back to url-->
-    <form method="POST" action="/lists/new">
+    <form method="POST" action="/lists/{{ list.id }}/add_item">
       <!-- get text field -->
       <input id="id_new_item" name = "item_text" placeholder="Enter a to-do item">
       <!-- needed if you use a form, if you're using the render func you're already doing the right thing -->
       <!-- Cross-Site Request Forger CSRF -->
       {% csrf_token %}
     </form>
+    <!-- for everything in list we're going to create a tr output row -->
     <table id="id_list_table">
       {% for item in items %}
       <tr><td>{{ forloop.counter }}. {{ item.text }}</td></tr>
