--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -16,7 +16,8 @@
     </form>
     <!-- for everything in list we're going to create a tr output row -->
     <table id="id_list_table">
-      {% for item in items %}
+    <!-- reverse lookup -->
+      {% for item in list.item_set.all %}
       <tr><td>{{ forloop.counter }}. {{ item.text }}</td></tr>
       {% endfor %}
     </table>
