--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
 
-{% block header_text %}Start a new To-Do List {% endblock %}
-{% block form_action %}/lists/ {{ list.id }}/new_item{% endblock %}
+{% block header_text %}Start A New To-Do List {% endblock %}
+{% block form_action %}/lists/new
+{% endblock %}
