--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -8,18 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do lists</title>
     <link href="/static/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="/static/base.css" rel="stylesheet" />
   </head>
   <body>
     <div class="containter">
       <div class="row">
         <!-- centers the elements -->
-        <div class="col-md-6 col-md-offset-3">
+        <div class="col-md-6 col-md-offset-3 jumbotron" >
           <div class="text-center">
             <h1>{% block header_text %}{% endblock %}</h1>
             <!-- Send info back to html asked for -->
             <form method="POST" action="{% block form_action %}{% endblock %}">
               <!-- get text field -->
-              <input id="id_new_item" name ="item_text" placeholder="Enter a to-do item">
+              <input id="id_new_item" name ="item_text"
+                class="form-control input-lg"
+                placeholder="Enter a to-do item">
               <!-- Cross-Site Request Forger CSRF -->
               {% csrf_token %}
             </form>
