--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -2,7 +2,7 @@
 
 {% block header_text %}Your To-Do List{% endblock %}
 {% block form_action %}/lists/{{ list.id }}/{% endblock %}
-
+<!-- value="{{item.id}}"/> -->
   {% block table %}
   <form id="edit_items" method="POST" action="/lists/{{ list.id}}/items/">
     <table id="id_list_table" class="table">
@@ -12,15 +12,21 @@
         <td>
           <input type="checkbox"
           name="mark_item_done"
-          value="{{item.id}}"/>
+          value="{{item.id}}" />
+          {% if item.is_done %}checked="checked"{% endif %}
+          />
         </td>
-        <td {% if item.is_done %} class="todo-done" {% endif %}>
+        <td {% if item.is_done %}class="todo-done"{% endif %}>
           {{ item.text }}
         </td>
       </tr>
       {% endfor %}
     </table>
-    <button id="toggle_done" type="submit">Mark Done</button>
-    {% csrf_token %}
+    <button
+      id="toggle_done"
+      type="submit"
+      class="btn btn-primary"
+      >Toggle Done</button>
+      {% csrf_token %}
   </form>
 {% endblock %}
