Can mark items done.

--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -12,7 +12,7 @@
         <td>
           <input type="checkbox"
           name="mark_item_done"
-          value="{{item.id}}" />
+          value="{{item.id}}"
           {% if item.is_done %}checked="checked"{% endif %}
           />
         </td>
