--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 
-{% block header_text %}Start A New To-Do List {% endblock %}
-{% block form_action %}/lists/new
+{% block header_text %}Start A New To-Do List{% endblock %}
+{% block form_action %}/lists/new{% endblock %}
+{% block table %}
+<table id="id_list_table" class= "table">
+  {% for list in todo_list %}
+  <tr>
+    <td> {{forloop.counter}}</td>
+    <td class = "content">
+      <a href="/lists/{{ list.id }}/"> {{ list.name}} </a>
+    </td>
+  </tr>
+  {% endfor %}
+</table>
 {% endblock %}
