Can edit list names, and have many listsgit add .

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -4,7 +4,7 @@
 {% block form_action %}/lists/new{% endblock %}
 {% block table %}
 <table id="id_list_table" class= "table">
-  {% for list in todo_list %}
+  {% for list in todo_lists %}
   <tr>
     <td> {{forloop.counter}}</td>
     <td class = "content">
