--- a/lists/templates/list.html
+++ b/lists/templates/list.html
@@ -1,6 +1,17 @@
 {% extends 'base.html' %}
 
-{% block header_text %}Your To-Do List{% endblock %}
+{% block header_text %}
+To-Do
+<form method="POST" action="/lists/{{list.id}}/">
+  <input id="id_rename_list"
+  name = "list_name"
+  value="{{ list.name }}"
+  class="form-control input-lg"
+  placeholder="List Name"
+  />
+{% csrf_token %}
+</form>
+{% endblock %}
 {% block form_action %}/lists/{{ list.id }}/{% endblock %}
 <!-- to implement edit, you could have an input box, and change toggle done to save or a bootstrap modal-->
   {% block table %}
